samples/_failures_safe/1761398888_1b803b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e59d13d9.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_e59d13d9.c:121:16: error: missing terminating " character
  121 |         printf("[%s] %s: %
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_e59d13d9.c:121:9: error: expected expression at end of input
  121 |         printf("[%s] %s: %
      |         ^~~~~~
./samples/SAFE/__tmp_e59d13d9.c:121:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e59d13d9.c:121:9: error: expected declaration or statement at end of input
